[project]
name = "sanejs"
version = "2.1"
description = "Lookup service for known legitimate JavaScript."
authors = [{name="Raphaël Vinot", email="raphael.vinot@circl.lu"}]
license = "BSD-3-Clause"
requires-python = ">=3.12,<4.0"

dynamic = [ "classifiers" ]

dependencies = [
    "gitpython (>=3.1.46)",
    "redis[hiredis] (>=7.2.0)",
    "flask (>=3.1.3)",
    "gunicorn (>=25.1.0)",
    "flask-restx (>=1.3.2)",
    "pysanejs (>=2.0.5)",
    "werkzeug (>=3.1.6)",
    "orjson (>=3.11.7)",
]

[tool.poetry]
classifiers=[
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet',
]

[project.scripts]
start_website = "bin.start_website:main"
start = "bin.start:main"
run_backend = "bin.run_backend:main"
build_hashes = "bin.build_hashes:main"
shutdown = "bin.shutdown:main"
stop = "bin.stop:main"
update = "bin.update:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
types-redis = "^4.6.0.20241004"
ipython = "^9.10.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
